R79:

Fixed "Save Filtered Nets" bug with modified patches by themacuser.  

R67:

Deauth All Networks
fixed bug false WPA detection
WPA detection in active mode

R66:

can show rates
fixed minor problem with MACJack cards
warning if not running tiger
increasing reliability of Airport reload (aggressive reload)

till R65:

traffic view -> opengl
new design
de.binaervarianz.kismac
moved everything to a new folder (KisMACng)
parts are apple script now
    and recordable
map24 auto-alignment
scan button mit setstate
made speech queue working
reworked delete single net option
search box is working
added Prism GT Support
moved to subversion
minor bugfixes in installer
made trace saveable, trace is not continued if no fix recieved
crosshair cursor for map
display other information (velocity) in the bottom bar, along with latitude and longitude
using aircrack code for weak scheduling attacks now
kismap files use pdf internally to not screw up vector formats (did not work)
weak scheduling attack works while scanning
speak again if network found again after 2 minutes
SSIDs are now interpreted as UTF8
windows fade out
applied robin darroches patches for gpscontroller
reinjection is working again
usbprism does not need password if not needed for unloading
suid option removed
insomnia removed
atheros support updated

06-29-04 mick   speeded up SpinChannelView by using cached bitmaps (very cool!)
                speeded up network view
                fixed a missing connection for nethierarch menu
                
06-26-04 mick   added new vendor/device id for new sitecom wl-022 adapters

06-18-04 mick   macjack & airojack cards can be ejected during scan...

05-22-04 mick   some changes to make atheros driver more stable

05-04-04 mick   added a couple of new vendors in vendor.db
                fixed #59
                updated Spanish translation from Ferdy
                
05-04-04 mick   sheets for loading process too
                join on double click(tm)